--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,6 +315,10 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 15px;
 }
 
+#hero .front {
+  z-index: 100;
+}
+
 #hero h1 {
   z-index: 100;
   margin: 0 0 10px 0;
