--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 10px 0;
-  background: #fff;
+  background: linear-gradient(rgb(226, 191, 139), rgb(143, 117, 69));
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #2c4964;
+  color: #5c2d07;
   text-decoration: none;
 }
 
