--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #2c4964;
+  color: #774c24;
   padding: 15px;
   transition: 0.3s;
   font-size: 14px;
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #d43076;
+  color: #ffffff;
   text-decoration: none;
 }
 
