--- a/views/index.html
+++ b/views/index.html
@@ -548,9 +548,9 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bx bx-cube"></i></div>
               <h4 class="title"><a href="">3D Modelling</a></h4>
-              <p class="description">Lorum Ipsum Dolores Lorum Ipsum Dolores Lorum Ipsum Dolores</p>
+              <p class="description">I have created some of the 3D objects myself for my projects, such as the glass in Arachnophilia VR!</p>
             </div>
           </div>
 
