--- a/views/index.html
+++ b/views/index.html
@@ -360,7 +360,7 @@
               <p>
               <ul>
                 <li>Internship started at Smartplan, and was introduced to a R&D environment.</li>
-                <li>Created an automated rostering tool using Java and Optaplanner (Drools Rule Engine) from scratch.</li>
+                <li>Here, I created the backend for an automated rostering tool using Java and Optaplanner (Drools Rule Engine) from scratch.</li>
                 <li>After the internship ended, I was hired to finish and polish the tool.</li>
               </ul>
               </p>
