--- a/views/index.html
+++ b/views/index.html
@@ -550,7 +550,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube"></i></div>
               <h4 class="title"><a href="">3D Modelling</a></h4>
-              <p class="description">I have created some of the 3D objects myself for my projects, such as the glass in Arachnophilia VR!</p>
+              <p class="description">I have created some of the 3D objects myself using Maya and 3Ds Max. I.e. the glass you can see in my Arachnophilia VR example!</p>
             </div>
           </div>
 
