--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -43,8 +43,8 @@
     <div class="sliding-background">
     </div>
     <img src="../public/img/top-img.png" class="front">
-    <h1>Hej, Jeg er Astrid Avalin!</h1>
-    <h2>Software Engineer - Full-Stack Developer - Pixel Artist</h2>
+    <h1>Hej, jeg hedder Astrid Avalin!</h1>
+    <h2>Software Ingeniør - Full-Stack Udvikler - Pixel Kunstner</h2>
     <a href="#about" class="front btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
   </section><!-- End Hero -->
 
