--- a/views/index.html
+++ b/views/index.html
@@ -53,14 +53,14 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>Astrid Avalin Sørensen</span></a></h1>
+        <h1 class="text-light"><a href="/"><span>Astrid Avalin Sørensen</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="../public/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <a href="/"><img src="../public/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#resume">Resume</a></li>
