--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -61,14 +61,14 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
+          <li class="active"><a href="/">Start</a></li>
+          <li><a href="#about">Om</a></li>
+          <li><a href="#skills">Kompetencer</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#services">Hobbies</a></li>
-          <li><a href="#contact">Contact</a></li> 
-          <li><a href="index-dk.html"><img src="../public/img/flags/dk.png"></a></li>                                   
+          <li><a href="#services">Hobbyer</a></li>
+          <li><a href="#contact">Kontakt</a></li> 
+          <li><a href="/"><img src="../public/img/flags/us.png"></a></li>                                   
         </ul>
       </nav><!-- .nav-menu -->
 
