--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -87,16 +87,16 @@
           
           <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>Thank you for visiting!</h3>
+              <h3>Tak for dit besøg!</h3>
               <p>
-                 I am a software engineer  with an AP degree in computer science looking for my next new development project! Maybe you have one for me?
+                 Jeg er en software ingeniør med en datamatiker i hatten på udkig efter mit næste udviklingsprojekt! Måske har du et til mig?
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-simple-smile"></i>
                     <span data-toggle="counter-up">1</span>
-                    <p><strong>Amazing new employee</strong> waiting to get hired! Flexible and works great both in teams and solo.</p>
+                    <p><strong>Fantastisk ny medarbejder</strong> som venter på en ansættelse! Fleksibel og arbejder godt både i teams og solo.</p>
                   </div>
                 </div>
 
@@ -104,7 +104,7 @@
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
                     <span data-toggle="counter-up">14</span>
-                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with 6 of them being public.</p>
+                    <p><strong>Repositories</strong> på GitHub med igangværende og færdige projekter, hvoraf 6 af dem er offentligt tilgængelige.</p>
                   </div>
                 </div>
 
@@ -112,7 +112,7 @@
                   <div class="count-box">
                     <i class="icofont-clock-time"></i>
                     <span data-toggle="counter-up">5</span>
-                    <p><strong>Years of experience</strong> with many different software tools and programming languages.</p>
+                    <p><strong>Års erfaring</strong> med mange forskellige software værktøjer og programmeringssprog.</p>
                   </div>
                 </div>
 
@@ -120,7 +120,7 @@
                   <div class="count-box">
                     <i class="bx bx-world"></i>
                     <span data-toggle="counter-up">2</span>
-                    <p><strong>Languages</strong> I am fluent in. Danish and English. Furthermore I have a limited understanding of French and Hungarian.</p>
+                    <p><strong>Sprog</strong> jeg kan flydende. Dansk og engelsk. Ydermere har jeg en begrænset forståelse for fransk og ungarsk.</p>
                   </div>
                 </div>
               </div>
