--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -136,15 +136,15 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>During my years of programming I am confident using tools such as: <br/> 
+          <h2>Kompetencer</h2>
+          <p>I mine år som programmør er jeg blevet sikker i min brug af værktøjer som: <br/> 
             <strong>Android Studio</strong>, 
             <strong>Eclipse</strong>, 
             <strong>Unity</strong>, 
             <strong>Visual Studio Community</strong>,
             <strong>Visual Studio Code</strong>,
-            <strong>JetBrains IntelliJ</strong> and
-            <strong>JetBrains WebStorm</strong> among others. </p>
+            <strong>JetBrains IntelliJ</strong> og
+            <strong>JetBrains WebStorm</strong> i blandt andre. </p>
         </div>
 
         <div class="row skills-content">
@@ -255,7 +255,7 @@
 
         <div class="section-title">
           <br/>
-            I also have a basic understanding of 3D modelling, rigging and animation with professional 3D software.
+            Jeg har også en grundlæggende forståelse for 3D modellering, rigging og animering med professionel 3D software.
         </div>
 
         <div class="row skills-content">
@@ -291,12 +291,12 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>This is my resume which will give you a vast idea of my education, projects, internships and work-experience in an organized timeline.</p>
+          <p>Dette resume vil give dig en bred idé om min uddannelsesmæssige baggrund, mine projekter, praktikker og arbejdserfaring i en organiseret tidslinje.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Summary</h3>
+            <h3 class="resume-title">Opsummering</h3>
             <div class="resume-item pb-0">
               <h4>Astrid Avalin Sørensen</h4>
               <p><em>Ambitious Software Engineer with 5 years of coding experience, eager to get even more. Familiar with SCRUM and agile development and with an eye for detail.
