--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -526,32 +526,32 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-joystick"></i></div>
-              <h4 class="title"><a href="">Creating Games</a></h4>
-              <p class="description">I am working on a 2.5D MMO game currently. Feel free to ask me about it!</p>
+              <h4 class="title"><a href="">Skabe computerspil</a></h4>
+              <p class="description">Jeg arbejder lige pt. på et 2.5D MMO spil. Du må endelig spørge ind til det!</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-wrench"></i></div>
-              <h4 class="title"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=601718120">Modding Games</a></h4>
-              <p class="description">I have created weapons and armor for games such as Skyrim using 3Ds Max</p>
+              <h4 class="title"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=601718120">Modificering af computerspil</a></h4>
+              <p class="description">Jeg har lavet våben og udstyr til kendte spil såsom Skyrim med brug af 3Ds Max</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-brush"></i></div>
-              <h4 class="title"><a href="https://www.piskelapp.com/user/4947883801444352/public">Pixel Art</a></h4>
-              <p class="description">I have created a wide bunch of pixel graphics and animations, with only a few being public.</p>  
+              <h4 class="title"><a href="https://www.piskelapp.com/user/4947883801444352/public">Pixelkunst</a></h4>
+              <p class="description">Jeg har lavet en masse forskellige pixelgrafik og animationer, med nogle få der er offentligt tilgængelige.</p>  
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube"></i></div>
-              <h4 class="title"><a href="">3D Modelling</a></h4>
-              <p class="description">I have created some of the 3D objects myself. One example is the glass you can see in my Arachnophilia VR example showcase.</p>
+              <h4 class="title"><a href="">3D modellering</a></h4>
+              <p class="description">Jeg har skabt nogle 3D objekter selv. Et eksempel er det glas der kan ses i "Arachnophilia VR" projektfremstillingen.</p>
             </div>
           </div>
 
@@ -565,8 +565,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Do you have any questions? Feedback? Job offers? <br/>Feel free to contact me.</p>
+          <h2>Kontakt</h2>
+          <p>Har du spørgsmål? Feedback? Job tilbud? <br/>Du må endelig kontakte mig.</p>
         </div>
 
         <div class="row">
@@ -574,7 +574,7 @@
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
               <h3>LINKS</h3>
-              <p>Still want to get to know me better? <br/>Feel free to check out these links.</p>
+              <p>Vil du lære mig bedre at kende? <br/>Du er velkommen til at tjekke nogle af følgende links ud.</p>
               <div class="social-links">
                 <a href="https://github.com/Avalin" class="github">                      <i class="icofont-github"></i></a>
                 <a href="https://www.piskelapp.com/user/4947883801444352" class="piskel"><i class="icofont-drawing-tablet"></i></a>
@@ -622,11 +622,11 @@
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
-                <div class="loading">Loading</div>
+                <div class="loading">Indlæser</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Din besked er sendt. Tak!</div>
               </div>
-              <div class="text-center"><button type="submit" disabled>Send Message</button></div>
+              <div class="text-center"><button type="submit" disabled>Send besked</button></div>
             </form>
           </div>
 
