--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -518,8 +518,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Hobbies</h2>
-          <p>Using what I have learnt from coding, I like to combine my skills with some of my hobbies:</p>
+          <h2>Hobbyer</h2>
+          <p>Ved at bruge det jeg har lært af at kode, kombinerer jeg mine kompetencer med mine hobbyer:</p>
         </div>
 
         <div class="row">
