--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -402,7 +402,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Click on an image below to learn more about the project and my participation in said project!</p>
+          <p>Klik på et billede for at lære more om projektet og min deltagelse i det valgte projekt!</p>
         </div>
 
         <div class="row">
