--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -402,17 +402,17 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Klik på et billede for at lære more om projektet og min deltagelse i det valgte projekt!</p>
+          <p>Klik på et billede for at lære more om projektet og min deltagelse i det valgte projekt.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">Alle</li>
               <li data-filter=".filter-xr">AR/VR/XR</li>
               <li data-filter=".filter-unity">Unity</li>
               <!--li data-filter=".filter-unreal">Unreal Engine</li-->
-              <li data-filter=".filter-other">Other</li>
+              <li data-filter=".filter-other">Andet</li>
             </ul>
           </div>
         </div>
