--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -299,8 +299,7 @@
             <h3 class="resume-title">Opsummering</h3>
             <div class="resume-item pb-0">
               <h4>Astrid Avalin Sørensen</h4>
-              <p><em>Ambitious Software Engineer with 5 years of coding experience, eager to get even more. Familiar with SCRUM and agile development and with an eye for detail.
-                     Always putting the SMART principles into consideration with every line of code.
+              <p><em>Ambitiøs Software Ingeniør med 5 års kodeerfaring, ivrig efter flere. Bekendt med SCRUM og agil udvikling med øje for detaljer, og altid med SMART principperne i tankerne for hver linje kode.
               </em></p>
               <p>
               <ul>
