--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -310,7 +310,7 @@
               </p>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Uddannelse</h3>
             <div class="resume-item">
               <h4>Bachelor in Software Engineering</h4>
               <h5>2018 - 2021</h5>
@@ -339,7 +339,7 @@
           </div>
           
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Professionel Erfaring</h3>
             <div class="resume-item">
               <h4>Unity Developer</h4>
               <h5>2019</h5>
@@ -365,7 +365,7 @@
               </ul>
               </p>
             </div>
-            <h3 class="resume-title">Other Experiences</h3>
+            <h3 class="resume-title">Andre Erfaringer</h3>
             <div class="resume-item">
               <h4>Waiter & Server</h4>
               <h5>2013</h5>
