--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -312,26 +312,26 @@
 
             <h3 class="resume-title">Uddannelse</h3>
             <div class="resume-item">
-              <h4>Bachelor in Software Engineering</h4>
+              <h4>Software Ingeniør - Bachelor</h4>
               <h5>2018 - 2021</h5>
               <p><em>VIA UC - VIA University College, Viborg</em></p>
               <p>I got a bachelor in Software Engineering with a specialization in AR & VR. I got familiar with developing for a lot of different HMDs from Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive.</p>
             </div>
 
             <div class="resume-item">
-              <h4>Computer Science AP Degree</h4>
+              <h4>Datamatiker</h4>
               <h5>2015 - 2018</h5>
               <p><em>EAAA - Erhvervsakademi Aarhus, Aarhus</em></p>
               <p>I finished an AP degree in computer science, where I have specialized in mobile development. I got a bunch of my general tools during this education and a great foundation of my coding knowledge.</p>
             </div>
             <div class="resume-item">
-              <h4>Math A Degree</h4>
+              <h4>Matematik A-niveau</h4>
               <h5>2014 - 2015</h5>
               <p><em>VUC - Voksenuddannelsescenter, Aarhus</em></p>
               <p>In order to continue my studies with computer science, I needed to increase my math from C-level to A-level, and thus I spent a year on VUC to achieve that.</p>
             </div>
             <div class="resume-item">
-              <h4>High School Diploma</h4>
+              <h4>Almen Gymnasieuddannelse</h4>
               <h5>2011 - 2014</h5>
               <p><em>STX - Egaa Gymnasium, Aarhus</em></p>
               <p>I specialized within the creative line, which means I had Music & English on A-level and Drama on C-level. This also means I am pretty familiar with a ukulele and piano by now.</p>
@@ -341,12 +341,12 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professionel Erfaring</h3>
             <div class="resume-item">
-              <h4>Unity Developer</h4>
+              <h4>Unity Udvikler</h4>
               <h5>2019</h5>
               <p><em>AquaGlobe, Skanderborg, DK </em></p>
               <p>
               <ul>
-                <li>Worked together with an amazing colleague, creating an XR app for Microsoft HoloLens to tour different water facilities.</li>
+                <li>Skabte en XR app til Microsoft HoloLens i samarbejde med en fantastisk kollega hvor man kan se de forskellige vandfaciliteter.</li>
                 <li>Mediator between different firms on the possibilities with this relatively new hardware, to create a mutual vision. </li>
                 <li>Creating simple 3D models in Maya to illustrate some of the machines at the facility</li>
                 <li>Read more about the experience <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">here</a></li>
@@ -367,25 +367,25 @@
             </div>
             <h3 class="resume-title">Andre Erfaringer</h3>
             <div class="resume-item">
-              <h4>Waiter & Server</h4>
+              <h4>Tjener & Rengøring</h4>
               <h5>2013</h5>
               <p><em>Café Stay, Aarhus, DK </em></p>
               <p>
               <ul>
-                <li>Washed up dishes and made sandwiches.</li>
-                <li>Served food and cleaned up tables. </li>
+                <li>Lavede og serverede sandwiches.</li>
+                <li>Ryddede op, gjorde rent og vaskede op. </li>
               </ul>
               </p>
             </div>
 
             <div class="resume-item">
-              <h4>Voluntary Runner</h4>
+              <h4>Frivillig Runner</h4>
               <h5>2012</h5>
               <p><em>Grøn Koncert, Aarhus, DK </em></p>
               <p>
               <ul>
-                <li>Made sure kegs were always filled.</li>
-                <li>Made sure the servers always had beers to serve customers.</li>
+                <li>Sørgede for tønderne var fyldt op med øl.</li>
+                <li>Sørgede for at dem der serverede altid havde en øl i hånden til at servere for kunderne.</li>
               </ul>
               </p>
             </div>
