--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -354,14 +354,14 @@
               </p>
             </div>
             <div class="resume-item">
-              <h4>Backend Developer</h4>
+              <h4>Backend Udvikler</h4>
               <h5>2017</h5>
               <p><em>Smartplan, Aarhus, DK</em></p>
               <p>
               <ul>
-                <li>Internship started at Smartplan, and was introduced to a R&D environment.</li>
-                <li>Here, I created the backend for an automated rostering tool using Java and Optaplanner (Drools Rule Engine) from scratch.</li>
-                <li>After the internship ended, I was hired to finish and polish the tool.</li>
+                <li>Praktikforløb hos Smartplan, blev introduceret til et R&D miljø.</li>
+                <li>Her har jeg skabt backenden til et automatisk vagtplanlægninssystem i Java og med Optaplanner (Drools Rule Engine) fra bunden.</li>
+                <li>Efter praktikken ophørte, blev jeg hyret til at færdiggøre og polere værktøjet.</li>
               </ul>
               </p>
             </div>
