--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -347,9 +347,9 @@
               <p>
               <ul>
                 <li>Skabte en XR app til Microsoft HoloLens i samarbejde med en fantastisk kollega hvor man kan se de forskellige vandfaciliteter.</li>
-                <li>Mediator between different firms on the possibilities with this relatively new hardware, to create a mutual vision. </li>
-                <li>Creating simple 3D models in Maya to illustrate some of the machines at the facility</li>
-                <li>Read more about the experience <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">here</a></li>
+                <li>Mægler i mellem de mange forskellige involverede virksomheder omhandlende mulighederne med den relativt nye hardware, og for at skabe en fælles vision. </li>
+                <li>Skabte simple 3D modeller i Maya for at illustrere noget af maskineriet der renser vand</li>
+                <li>Læs mere op oplevelsen <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">her</a></li>
               </ul>
               </p>
             </div>
