--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -315,7 +315,7 @@
               <h4>Software Ingeniør - Bachelor</h4>
               <h5>2018 - 2021</h5>
               <p><em>VIA UC - VIA University College, Viborg</em></p>
-              <p>I got a bachelor in Software Engineering with a specialization in AR & VR. I got familiar with developing for a lot of different HMDs from Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive.</p>
+              <p>Jeg har en bachelor som Software Ingeniør med en specialisering i AR & VR. Jeg er bekendt med at arbejde med mange forskellige HMD'er, f.eks. Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive.</p>
             </div>
 
             <div class="resume-item">
@@ -328,13 +328,13 @@
               <h4>Matematik A-niveau</h4>
               <h5>2014 - 2015</h5>
               <p><em>VUC - Voksenuddannelsescenter, Aarhus</em></p>
-              <p>In order to continue my studies with computer science, I needed to increase my math from C-level to A-level, and thus I spent a year on VUC to achieve that.</p>
+              <p>For at fortsætte mit studie som datamatiker, måtte jeg læse op på matematik da det kun lå på et C niveau. Ambitionerne var høje, og jeg hævede det til A.</p>
             </div>
             <div class="resume-item">
               <h4>Almen Gymnasieuddannelse</h4>
               <h5>2011 - 2014</h5>
               <p><em>STX - Egaa Gymnasium, Aarhus</em></p>
-              <p>I specialized within the creative line, which means I had Music & English on A-level and Drama on C-level. This also means I am pretty familiar with a ukulele and piano by now.</p>
+              <p>Jeg havde en kreativ linje med Musik A, Engelsk A og Drama på C. Det betyder altså at jeg er ret bekendt med en ukulele og et klaver nu.</p>
             </div>
           </div>
           
