--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -315,14 +315,14 @@
               <h4>Software Ingeniør - Bachelor</h4>
               <h5>2018 - 2021</h5>
               <p><em>VIA UC - VIA University College, Viborg</em></p>
-              <p>Jeg har en bachelor som Software Ingeniør med en specialisering i AR & VR. Jeg er bekendt med at arbejde med mange forskellige HMD'er, f.eks. Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive.</p>
+              <p>Jeg har en bachelor som Software Ingeniør med en specialisering i AR & VR. Jeg er bekendt med at arbejde med mange forskellige HMD'er, f.eks. Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive. Her begyndte jeg at arbejde med 3D engines som Unity og Unreal Engine.</p>
             </div>
 
             <div class="resume-item">
               <h4>Datamatiker</h4>
               <h5>2015 - 2018</h5>
               <p><em>EAAA - Erhvervsakademi Aarhus, Aarhus</em></p>
-              <p>I finished an AP degree in computer science, where I have specialized in mobile development. I got a bunch of my general tools during this education and a great foundation of my coding knowledge.</p>
+              <p>Jeg færdiggjorde min datamatiker, hvor jeg bl.a. specialiserede mig i mobiludvikling. Den her uddannelse lægger grundlag for mine kodeevner, og de fleste værktøjer blev jeg bekendt med igennem denne.</p>
             </div>
             <div class="resume-item">
               <h4>Matematik A-niveau</h4>
