--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -339,7 +339,7 @@
           </div>
           
           <div class="col-lg-6">
-            <h3 class="resume-title">Professionel Erfaring</h3>
+            <h3 class="resume-title">Professionelle Erfaringer</h3>
             <div class="resume-item">
               <h4>Unity Udvikler</h4>
               <h5>2019</h5>
