updated repo count

--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -104,7 +104,7 @@
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
                     <span data-toggle="counter-up">14</span>
-                    <p><strong>Repositories</strong> på GitHub med igangværende og færdige projekter, hvoraf 6 af dem er offentligt tilgængelige.</p>
+                    <p><strong>Repositories</strong> på GitHub med igangværende og færdige projekter, hvoraf <strong>8</strong> af dem er offentligt tilgængelige.</p>
                   </div>
                 </div>
 
