--- a/views/index.html
+++ b/views/index.html
@@ -103,7 +103,7 @@
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
                     <span data-toggle="counter-up">14</span>
-                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with 6 of them being public.</p>
+                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with <strong>8</strong> of them being public.</p>
                   </div>
                 </div>
 
