Updated BattlBoss furthermore

--- a/views/index.html
+++ b/views/index.html
@@ -794,7 +794,7 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-6.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">My fourth semester project and first VR related project was Battleboss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity.</p>
+                                <p class="mb-5">My fourth semester project and first VR related project was Battleboss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity. In this project, the user could attack the boss by lighting him on fire, whacking him with a sword, or shooting arrows from a distance.</p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
