--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -794,7 +794,7 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-6.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Det første VR projekt jeg har lavet var i fjerde semester og var lavet med henblik på den dengang relativt nye Oculus Rift og med SteamVR biblioteket til Unity.</p>
+                                <p class="mb-5">Det første VR projekt jeg har lavet var i fjerde semester og var lavet med henblik på den dengang relativt nye Oculus Rift og med SteamVR biblioteket til Unity. I dette projekt kunne brugeren angribe bossen ved at slå ham med et sværd, sætte ild til ham med en fakkel eller skyde pile efter ham med en bue.</p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
