--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1156,9 +1156,10 @@ section {
 .sliding-background {
   background: url("../img/clouds.png");
   opacity: 0.75;
-  width: 1900px;
-  height: 725px;
+  width: 100%;
+  height: 75vh; 
   z-index: 0;
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;  
