--- a/views/index.html
+++ b/views/index.html
@@ -850,7 +850,7 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-8-en.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">I have created an automatic rostering tool of employees for Smartplan using Drools Rule Engine (OptaPlanner) and Java.
+                              <p class="mb-5">I have created the backend for an automatic rostering tool during my time at Smartplan, using Drools Rule Engine (OptaPlanner) and Java.
                                               The project was written using IntelliJ and Eclipse and is currently in production.                    
                                 <br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
                               </p>
