--- a/views/index.html
+++ b/views/index.html
@@ -653,7 +653,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-1.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Arachnophilia VR is a Unity project and is meant as a tool to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience.</p>
+                                  <p class="mb-5">Arachnophilia VR is a Unity project and is meant as a tool to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience. This project is ongoing, and I can show it to you during an interview.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
