--- a/views/index.html
+++ b/views/index.html
@@ -709,7 +709,11 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-3.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
+                                  <p class="mb-5">
+                                    This project was made as a part of a lesson about shaders and UV-mapping on my sixth semester. 
+                                    You can select a t-shirt mesh, and give it any color and insert a logo on it. 
+                                    The different selectors will have animate separate parts of the shirt with Sine/Cos waves.
+                                    <br/>Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
