--- a/views/index.html
+++ b/views/index.html
@@ -741,7 +741,10 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-4.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">I have participated in the creation of Slay The Dragon together with The Animation Workshop in Viborg. My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.</p>
+                                  <p class="mb-5">
+                                    I have participated in the creation of Slay The Dragon together with The Animation Workshop in Viborg. My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.
+                                    <br/>Click <a href="https://www.picuki.com/profile/SlaytheDragon_game">here</a> to learn more about the project.
+                                  </p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
