--- a/views/index.html
+++ b/views/index.html
@@ -885,7 +885,7 @@
                               <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal9Label">JavaScript Yatzy</h2><br/>
 
                               <!-- Portfolio Modal - Image-->
-                              <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-9.png" alt="" />
+                              <img class="img-fluid mb-5" src="../public/img/portfolio/portfolio-9.png" alt="" />
                               <!-- Portfolio Modal - Text-->
                               <p class="mb-5">
                                 As part of my Computer Science degree, in order to familiarize myself with Javascript I have created a pink yatzy game. 
