--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -64,7 +64,7 @@
           <li class="active"><a href="/">Start</a></li>
           <li><a href="#about">Om</a></li>
           <li><a href="#skills">Kompetencer</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="#resume">CV</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Hobbyer</a></li>
           <li><a href="#contact">Kontakt</a></li> 
@@ -290,8 +290,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Dette resume vil give dig en bred idé om min uddannelsesmæssige baggrund, mine projekter, praktikker og arbejdserfaring i en organiseret tidslinje.</p>
+          <h2>CV</h2>
+          <p>Dette CV vil give dig en bred idé om min uddannelsesmæssige baggrund, mine projekter, praktikker og arbejdserfaring i en organiseret tidslinje.</p>
         </div>
 
         <div class="row">
