--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -89,7 +89,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>Tak for dit besøg!</h3>
               <p>
-                 Jeg er en software ingeniør med en datamatiker i hatten på udkig efter mit næste udviklingsprojekt! Måske har du et til mig?
+                 Jeg er en software ingeniør med en datamatiker i hatten som er på udkig efter mit næste udviklingsprojekt! Måske har du et til mig?
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
