--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -349,7 +349,7 @@
                 <li>Skabte en XR app til Microsoft HoloLens i samarbejde med en fantastisk kollega hvor man kan se de forskellige vandfaciliteter.</li>
                 <li>Mægler i mellem de mange forskellige involverede virksomheder omhandlende mulighederne med den relativt nye hardware, og for at skabe en fælles vision. </li>
                 <li>Skabte simple 3D modeller i Maya for at illustrere noget af maskineriet der renser vand</li>
-                <li>Læs mere op oplevelsen <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">her</a></li>
+                <li>Læs mere om oplevelsen <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">her</a></li>
               </ul>
               </p>
             </div>
