Minor spelling tweak

--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -144,7 +144,7 @@
             <strong>Visual Studio Community</strong>,
             <strong>Visual Studio Code</strong>,
             <strong>JetBrains IntelliJ</strong> og
-            <strong>JetBrains WebStorm</strong> i blandt andre. </p>
+            <strong>JetBrains WebStorm</strong> blandt andre. </p>
         </div>
 
         <div class="row skills-content">
