--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -65,7 +65,7 @@
           <li><a href="#about">Om</a></li>
           <li><a href="#skills">Kompetencer</a></li>
           <li><a href="#resume">CV</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">Portefølje</a></li>
           <li><a href="#services">Hobbyer</a></li>
           <li><a href="#contact">Kontakt</a></li> 
           <li><a href="/"><img src="../public/img/flags/us.png"></a></li>                                   
@@ -400,8 +400,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Klik på et billede for at lære more om projektet og min deltagelse i det valgte projekt.</p>
+          <h2>Portefølje</h2>
+          <p>Klik på et billede for at lære mere om projektet og min deltagelse i det valgte projekt.</p>
         </div>
 
         <div class="row">
