--- a/views/index.html
+++ b/views/index.html
@@ -772,7 +772,8 @@
                                 <img class="img-fluid mb-5" src="../public/img/portfolio/portfolio-5.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">A small Unity 2D game project, was an assignment I got for a job interview. 
-                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files. 
+                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files.
+                                  <br/>Both the graphics and the code is handmade by me.
                                   <br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
