--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -406,7 +406,7 @@
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
+            <ul id="portfolio-filters">
               <li data-filter="*" class="filter-active">Alle</li>
               <li data-filter=".filter-xr">AR/VR/XR</li>
               <li data-filter=".filter-unity">Unity</li>
